--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
   --white-color: #ffffff; /* White color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
   --purplenav-color: #4e216d; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --footerbg-color: #c0b7c6; /* Background color for the footer section */
+  --purplebg-color: #7c3db0; /* Background color for the footer section */
 }
 
 /* Smooth scroll */
@@ -114,6 +115,7 @@ h6 {
   justify-content: center;
 }
 
+
 /*--------------------------------------------------------------
 # Global Header
 --------------------------------------------------------------*/
@@ -170,6 +172,7 @@ h6 {
 .header .btn-getstarted:focus:hover {
   color: var(--goldcontrast-color);
   background-color: color-mix(in srgb, var(--purplenav-color), black 20%);
+  transform: scale(1.1);
 }
 
 @media (max-width: 1200px) {
@@ -436,14 +439,23 @@ h6 {
 /*--------------------------------------------------------------
 # Global Footer
 --------------------------------------------------------------*/
+
 .footer {
-  color: var(--purplenav-color);
-  background-color: var(--footerbg-color);
+  color: var(--mainbg-color);
+  background-color: var(--white-color);
+  position: relative;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 40px;
+  border-radius: 50px;
   font-size: 16px;
   position: relative;
 }
 
 .footer .footer-top {
+  margin-top: -30px;
   padding-top: 50px;
 }
 
@@ -458,7 +470,7 @@ h6 {
 }
 
 .footer .footer-about .logo span {
-  color: var(--white-color);
+  color: var(--purplebg-color);
   font-family: var(--mitr-font);
   font-size: 30px;
   font-weight: 500;
@@ -470,8 +482,12 @@ h6 {
   font-family: var(--almendra-font);
 }
 
+.footer .footer-about ul li a {
+  font-size: 17px;
+}
+
 .footer .footer-about ul li a:hover {
-  color: var(--white-color);
+  color: var(--goldcontrast-color);
 }
 
 .footer .social-links a {
@@ -481,16 +497,18 @@ h6 {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  border: 1px solid color-mix(in srgb, var(--purplenav-color), transparent 50%);
+  border: 1px solid color-mix(in srgb, var(--mainbg-color), transparent 50%);
   font-size: 16px;
-  color: color-mix(in srgb, var(--purplenav-color), transparent 20%);
+  color: color-mix(in srgb, var(--mainbg-color), transparent 20%);
   margin-right: 10px;
   transition: 0.3s;
 }
 
 .footer .social-links a:hover {
-  color: var(--white-color);
-  border-color: var(--white-color);
+  color: var(--goldcontrast-color);
+  border-color: var(--goldcontrast-color);
+  margin-left: 10px;
+  transform: scale(1.1);
 }
 
 .footer .social-links i {
@@ -546,14 +564,10 @@ h6 {
 }
 
 .footer .footer-contact iframe {
-  border: 10px solid var(--white-color);
+  margin-top: -15px;
   width: 95%;
   height: 300px;
   border-radius: 15px;
-}
-
-.footer .footer-contect iframe:hover {
-  border-color: color-mix(in srgb, var(--goldcontrast-color), transparent 20%);
 }
 
 .footer .copyright {
@@ -562,13 +576,59 @@ h6 {
 }
 
 .footer .copyright p {
-  margin-bottom: 0;
+  margin-top: 8px;
+  margin-bottom: -100px;
   font-family: var(--almendra-font);
+  color: var(--purplebg-color);
 }
 
 .footer .credits {
   margin-top: 8px;
   font-size: 13px;
+}
+
+@media (max-width: 992px) {
+  .footer {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+
+  .footer .footer-about .logo span {
+    margin-top: 50px;
+    font-size: 25px;
+    font-weight: 500;
+  }
+
+  .footer .footer-about ul li a {
+    font-size: 14px;
+  }
+
+  .footer .footer-contact iframe {
+    margin-top: -15px;
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
+  }
+}
+
+@media (max-width: 575px) {
+  .footer {
+    border-radius: 30px;
+  }
+
+  .footer .footer-about .logo span {
+    margin-left: -20px;
+    margin-top: 30px;
+    font-size: 22px;
+    font-weight: 500;
+  }
+  .footer .footer-about ul li a {
+    font-size: 13px;
+  }
+  .footer .footer-about ul li {
+    margin-left: -20px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -775,6 +835,7 @@ section,
     font-size: 2.5rem;
   }
 
+
 }
 
 .hero .company-badge {
@@ -793,7 +854,7 @@ section,
 
 .hero .btn-primary {
   background-color: var(--purple-color);
-  border-color: var(--purple-color);
+  border: none;
   color: var(--white-color);
   font-family: var(--mitr-font);
   font-size: 20px;
@@ -806,6 +867,8 @@ section,
 .hero .btn-primary:hover {
   color: var(--goldcontrast-color);
   background-color: color-mix(in srgb, var(--purplenav-color), black 20%);
+  transform: scale(1.1);
+  border: 2px solid var(--purple-color);
 }
 
 .hero .btn-link {
@@ -995,6 +1058,91 @@ section,
   display: inline-block;
 }
 
+.about .acti {
+  margin-top: 60px;
+}
+
+.about .feature-box {
+  height: 100%;
+  padding: 25px 30px;
+  border-radius: 15px;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.526);
+}
+
+@media (max-width: 575px) {
+  .about .feature-box {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+.about .feature-box:hover {
+  transform: scale(1.02);
+  border-radius: 15px;
+  box-shadow: 0 5px 20px rgb(255, 255, 255);
+  border: 2px solid var(--goldcontrast-color);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.about .feature-box i {
+  font-size: 44px;
+  display: inline-block;
+  line-height: 0;
+  color: var(--goldcontrast-color);
+  margin-bottom: 20px;
+}
+
+.about .feature-box h4 {
+  font-family: var(--mitr-font);
+  font-size: 22px;
+  font-weight: 500;
+  margin: 8px 0 20px 0;
+}
+
+
+.about .feature-box p {
+  margin-top: 30px;
+  color: var(--white-color);
+  font-size: 12px;
+  margin-bottom: 0;
+  text-indent: 1rem;
+}
+
+.about .feature-box.orange {
+  background-color: var(--purple-color);
+}
+
+.about .feature-box.orange img {
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.526);
+}
+
+.about .feature-box.blue {
+  background-color: #deedfd;
+}
+
+.about .feature-box.blue i {
+  color: #20a5f8;
+}
+
+.about .feature-box.green {
+  background-color: #d5f1e4;
+}
+
+.about .feature-box.green i {
+  color: #48c88a;
+}
+
+.about .feature-box.red {
+  background-color: #fdeded;
+}
+
+.about .feature-box.red i {
+  color: #f28484;
+}
+
 .about .about-title {
   font-size: 4rem;
   margin-bottom: 1rem;
@@ -1002,13 +1150,19 @@ section,
   font-weight: 700;
 }
 
+.about .about-description {
+  font-size: 1rem;
+}
+
 @media (max-width: 992px) {
   .about .about-title {
-    font-size: 3rem;
+    font-size: 4rem;
+    text-align: center;
   }
 }
 
 .about .about-description {
+  margin-top: 1rem;
   margin-bottom: 2rem;
   color: color-mix(in srgb, var(--white-color), transparent 10%);
   text-indent: 2.5em;
@@ -1082,6 +1236,13 @@ section,
   position: relative;
 }
 
+.about .image-wrapper:hover {
+  transform: scale(1.01);
+  border-radius: 1rem;
+  box-shadow: 0 5px 20px rgb(255, 255, 255);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
 @media (max-width: 992px) {
   .about .image-wrapper {
     padding-left: 0;
@@ -1113,10 +1274,7 @@ section,
   width: 45%;
   border: 8px solid var(--white-color);
   animation: float-badge 2s ease-in-out infinite;
-}
-
-.about .image-wrapper .small-image:hover {
-  border-color: color-mix(in srgb, var(--goldcontrast-color), black 20%);
+  box-shadow: 0 5px 20px rgba(199, 194, 194, 0.75);
 }
 
 @media (max-width: 992px) {
@@ -1139,6 +1297,14 @@ section,
   text-align: center;
   min-width: 200px;
   animation: experience-float 3s ease-in-out infinite;
+}
+
+@media (max-width: 575px) {
+  .about .image-wrapper {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
 }
 
 @keyframes experience-float {
@@ -1555,9 +1721,9 @@ section,
 }
 
 @media (max-width: 575px) {
-
   .about .about-title {
     text-align: center;
+    font-size: 3rem;
   }
 
   .about .about-description {
@@ -1576,12 +1742,16 @@ section,
 --------------------------------------------------------------*/
 
 .clients {
-  background-color: var(--footerbg-color);
+  background-color: var(--white-color);
 }
 
 .clients .swiper-slide img {
   opacity: 0.5;
   transition: 0.3s;
+}
+
+.clients .section-title h2 {
+  color: var(--purplebg-color);
 }
 
 .clients .swiper-slide img:hover {
@@ -1594,19 +1764,20 @@ section,
 }
 
 .clients .swiper-pagination {
-  margin-top: 20px;
+  margin-top: 70px;
   position: relative;
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet {
+  margin-top: 20px;
   width: 12px;
   height: 12px;
   opacity: 1;
-  background-color: color-mix(in srgb, var(--white-color), transparent 80%);
+  background-color: color-mix(in srgb, var(--mainbg-color), transparent 80%);
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: var(--white-color);
+  background-color: var(--mainbg-color);
 }
 
 /*--------------------------------------------------------------
@@ -2007,11 +2178,18 @@ section,
   background-color: var(--purple-color);
   position: relative;
   padding: 20px;
-  margin-bottom: 15px;
-  border-radius: 10px;
+  margin-bottom: 20px;
+  border-radius: 20px;
   overflow: hidden;
   color: var(--white-color);
 
+}
+
+.faq .faq-container .faq-item:hover{
+  transform: scale(1.01);
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.526);
+  transition: transform 0.3s, box-shadow 0.3s;
+  border: 2px solid var(--goldcontrast-color);
 }
 
 .faq .faq-container .faq-item:last-child {
