--- a/assets/css/ancss.css
+++ b/assets/css/ancss.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;600&display=swap');
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -28,6 +37,7 @@ body {
     width: 80%;
     max-width: 900px; 
     position: relative;
+    animation: fadeIn 2s ease-in-out forwards;
 }
 
 h1 {
