--- a/assets/css/ancss.css
+++ b/assets/css/ancss.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&family=Cinzel:wght@400..900&family=Cormorant+Unicase:wght@300;400;500;600;700&family=Mitr:wght@200;300;400;500;600;700&family=Pirata+One&family=Uncial+Antiqua&family=Yusei+Magic&display=swap');
 
 @keyframes fadeIn {
     from {
@@ -44,6 +45,7 @@ h1 {
     background: rgba(144, 87, 201, 0.8);
     color: #ffbf00;
     padding: 10px;
+    margin-top: -5px;
     margin-bottom: 20px;
     border-radius: 30px;
     font-size: 1.5em;
